Alteração nas cores e background

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "name": "Aluracord - Matrix (iagoab73)",
+    "name": "Aluracord - Elden Ring (iagoab73)",
     "stickers": [
         "http://2.bp.blogspot.com/-d21tffsTIQo/U_H9QjC69gI/AAAAAAAAKqM/wnvOyUr6a_I/s1600/Pikachu%2B2.gif",
         "https://media1.giphy.com/media/BdghqxNFV4efm/200.gif",
@@ -11,30 +11,30 @@
     "theme": {
         "colors": {
             "primary": {
-                "050": "#E3F9E5",
-                "100": "#C1EAC5",
-                "200": "#A3D9A5",
-                "300": "#7BC47F",
-                "400": "#57AE5B",
-                "500": "#3F9142",
-                "600": "#2F8132",
-                "700": "#207227",
-                "800": "#0E5814",
-                "900": "#05400A"
+                "050": "#FFF3D6",
+                "100": "#FFE7AD",
+                "200": "#FFDA85",
+                "300": "#FFD470",
+                "400": "#FFC847",
+                "500": "#FFB60A",
+                "600": "#ECA400",
+                "700": "#E09D00",
+                "800": "#CC8F00",
+                "900": "#8F6400"
             },
             "neutrals": {
-                "000": "#FFFFFF",
-                "050": "#F5F7FA",
-                "100": "#E4E7EB",
-                "200": "#CBD2D9",
-                "300": "#9AA5B1",
-                "400": "#52667A",
-                "500": "#313D49",
-                "600": "#29333D",
-                "700": "#212931",
-                "800": "#181F25",
-                "900": "#101418",
-                "999": "#080A0C"
+                "000": "#ffffff",
+                "050": "#f5faf6",
+                "100": "#e4ebe5",
+                "200": "#ccd9ce",
+                "300": "#99b09e",
+                "400": "#527a5a",
+                "500": "#324a36",
+                "600": "#293d2d",
+                "700": "#203024",
+                "800": "#19261b",
+                "900": "#101911",
+                "999": "#080C08"
             }
         }
     }
